fixed a few typos

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <h3>Frontend</h3>
                     <ul>
                         <li>HTML</li>
-                        <li>Css</li>
+                        <li>CSS</li>
                         <li>Sass</li>
                         <li>JavaScript</li>
                         <li>React</li>
@@ -50,14 +50,14 @@
                         <li>Mongoose</li>
                         <li>Python</li>
                         <li>Django</li>
-                        <li>Postgresql</li>
+                        <li>PostgreSQL</li>
                         <li>SQL</li>
                     </ul>
                 </div>
                 <div class="other">
                     <h3>Other</h3>
                     <ul>
-                        <li>Git & Github</li>
+                        <li>Git & GitHub</li>
                         <li>Postman</li>
                         <li>npm</li>
                         <li>pip</li>
@@ -85,32 +85,32 @@
                     <h3>Project 4: Holistars - 10 days, pair</h3>
                     <img src="img/projects/project-04.jpeg" alt="">
                     <p class="description">Fullstack App React/Django pair project. Social Network for holidays where users can add reviews for holiday destinations and follow other users. The data is fetched with live scraping and the state is managed by Redux.</p>
-                    <p><a href="https://github.com/frozenborder72/holistars">Read Me</a> | <a href="https://holistars.netlify.app/">Deployed</a></p>
+                    <p><a href="https://github.com/frozenborder72/holistars">ReadMe</a> | <a href="https://holistars.netlify.app/">Deployed</a></p>
                 </div>
                 <div class="project">
                     <h3>Project 3: Accelerate Inc - One week, group of 3</h3>
                     <img src="img/projects/project-03.jpeg" alt="">
                     <p class="description">Full-Stack MERN (MongoDB, Express, React and Node) application with CRUD functionality. One-stop web tool for managing athlete applications, medical reporting, sessions, attendance, and article publication in a dedicated blogging system.</p>
-                    <p><a href="https://github.com/frozenborder72/accelerate-inc">Read Me</a> | <a href="#">Deployed</a></p>
+                    <p><a href="https://github.com/frozenborder72/accelerate-inc">ReadMe</a> | <a href="#">Deployed</a></p>
                 </div>
                 <div class="project">
                     <h3>Project 2: Quote Farm - 48 hours, pair</h3>
                     <img src="img/projects/project-02.jpeg" alt="">
                     <p class="description">React App that fetches data from multiple APIs, 48 hours pair programming Hackathon. A fun app that fetches animals videos from pexels and add a quote from fav.qs</p>
-                    <p><a href="https://github.com/frozenborder72/animal-farm">Read Me</a> | <a href="#">Deployed</a></p>
+                    <p><a href="https://github.com/frozenborder72/animal-farm">ReadMe</a> | <a href="#">Deployed</a></p>
                 </div>
                 <div class="project">
                     <h3>Project 1: Ultimate Tic Tac Toe - One week, solo</h3>
                     <img src="img/projects/project-01.jpeg" alt="">
                     <p class="description">My take on ultimate tic tac toe, that features UI completely managed by the state in a unidirectional data flow. Project based on HTML, CSS, JavaScript.</p>
-                    <p><a href="https://github.com/frozenborder72/ultimate-tic-tac-toe">Read Me</a> | <a href="https://frozenborder72.github.io/ultimate-tic-tac-toe/">Deployed</a></p>
+                    <p><a href="https://github.com/frozenborder72/ultimate-tic-tac-toe">ReadMe</a> | <a href="https://frozenborder72.github.io/ultimate-tic-tac-toe/">Deployed</a></p>
                 </div>
             </div>
         </section>
         <section class="section contact">
             <h2>Contact Me</h2>
-            <p>Find me on <a href="">Linkedin</a></p> 
-            <p>Find me on <a href="">Github</a></p>
+            <p>Find me on <a href="">LinkedIn</a></p> 
+            <p>Find me on <a href="">GitHub</a></p>
             <p>Or write me an email:</p>
             <form action="">
                 <label for="name">Your name:</label>
