modified project section and added interest section

--- a/index.html
+++ b/index.html
@@ -17,67 +17,68 @@
     </header>
 
     <main>
-        <section class="section about">
-            <h2>About Me</h2>
-            <div class="about-container">
-                <img src="img/profile-pic-(1).jpeg" alt="Profile Pic">
-                <p>I have a PhD in English Literature, and since the early 2000's have been attracted to coding and frontend development, applying the skills I gained in the long years of research and formal and critical thinking, and with the same commitment and eagerness to learn.</p>
-                <p>I enrolled in General Assembly's Software Engineering Immersive in order to formalise and enhance the unstructured pieces of knowledge absorbed in decades as a self taught developer, and to gain insights into the world of professional software development.</p>
-                <p>My aim is to transfer into engineering the skills I've acquired and honed working for 20+ years in Education. I wish to work for an established company so that I can face thought provoking challenges to share with a team of like minded professionals.</p>
-            </div>
-        </section>
-
-        <section class="section skills">
-            <h2>My Skills</h2>
-            <div class="skills-container">
-                <div class="frontend">
-                    <h3>Frontend</h3>
-                    <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>Sass</li>
-                        <li>JavaScript</li>
-                        <li>React</li>
-                        <li>Redux</li>
-                    </ul>
+        <div class="split-container">
+            <section class="section about">
+                <h2>About Me</h2>
+                <div class="about-container">
+                    <img src="img/profile-pic-(1).jpeg" alt="Profile Pic">
+                    <p>I have a PhD in English Literature, and since the early 2000's have been attracted to coding and frontend development, applying the skills I gained in the long years of research and formal and critical thinking, and with the same commitment and eagerness to learn.</p>
+                    <p>I enrolled in General Assembly's Software Engineering Immersive in order to formalise and enhance the unstructured pieces of knowledge absorbed in decades as a self taught developer, and to gain insights into the world of professional software development.</p>
+                    <p>My aim is to transfer into engineering the skills I've acquired and honed working for 20+ years in Education. I wish to work for an established company so that I can face thought provoking challenges to share with a team of like minded professionals.</p>
                 </div>
-                <div class="backend">
-                    <h3>Backend</h3>
-                    <ul>
-                        <li>Node</li>
-                        <li>Express</li>
-                        <li>Mongo</li>
-                        <li>Mongoose</li>
-                        <li>Python</li>
-                        <li>Django</li>
-                        <li>PostgreSQL</li>
-                        <li>SQL</li>
-                    </ul>
+            </section>
+            <section class="section skills">
+                <h2>My Skills</h2>
+                <div class="skills-container">
+                    <div class="frontend">
+                        <h3>Frontend</h3>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>Sass</li>
+                            <li>JavaScript</li>
+                            <li>React</li>
+                            <li>Redux</li>
+                        </ul>
+                    </div>
+                    <div class="backend">
+                        <h3>Backend</h3>
+                        <ul>
+                            <li>Node</li>
+                            <li>Express</li>
+                            <li>Mongo</li>
+                            <li>Mongoose</li>
+                            <li>Python</li>
+                            <li>Django</li>
+                            <li>PostgreSQL</li>
+                            <li>SQL</li>
+                        </ul>
+                    </div>
+                    <div class="other">
+                        <h3>Other</h3>
+                        <ul>
+                            <li>Git & GitHub</li>
+                            <li>Postman</li>
+                            <li>npm</li>
+                            <li>pip</li>
+                            <li>axios</li>
+                            <li>Tableplus</li>
+                        </ul>
+                    </div>
+                    <div class="currently">
+                        <h3>Currently Learning</h3>
+                        <ul>
+                            <li>Advanced Python</li>
+                            <li>Flask</li>
+                            <li>Microservices</li>
+                            <li>Algorithms</li>
+                            <li>Data Structures</li>
+                            <li>Functional Programming</li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="other">
-                    <h3>Other</h3>
-                    <ul>
-                        <li>Git & GitHub</li>
-                        <li>Postman</li>
-                        <li>npm</li>
-                        <li>pip</li>
-                        <li>axios</li>
-                        <li>Tableplus</li>
-                    </ul>
-                </div>
-                <div class="currently">
-                    <h3>Currently Learning</h3>
-                    <ul>
-                        <li>Advanced Python</li>
-                        <li>Flask</li>
-                        <li>Microservices</li>
-                        <li>Algorithms</li>
-                        <li>Data Structures</li>
-                        <li>Functional Programming</li>
-                    </ul>
-                </div>
-            </div>
-        </section>
+            </section>
+        </div>
         <section class="section projects">
             <h2>My Projects</h2>
             <div class="projects-container">
@@ -107,21 +108,31 @@
                 </div>
             </div>
         </section>
-        <section class="section contact">
-            <h2>Contact Me</h2>
-            <p>Find me on <a href="">LinkedIn</a></p> 
-            <p>Find me on <a href="">GitHub</a></p>
-            <p>Or write me an email:</p>
-            <form action="">
-                <label for="name">Your name:</label>
-                <input type="text" id="name">
-                <label for="email">Your email:</label>
-                <input type="email" id="email">
-                <label for="message">Your message:</label>
-                <textarea id="message" cols="30" rows="10"></textarea>
-                <button type="submit" class="btn">Send email</button>
-            </form> 
-        </section>
+        <div class="split-container">
+            <section class="section-interest">
+                <h2>My Interests</h2>
+                <p>Twentieth Century Art and Literature, Elizabethan Theatre</p>
+                <p>Analytic Philosophy and Formal Logic</p>
+                <p>Cinema - Especially Seventies Italian B movies (giallo, thriller) and Shakespeare renditions</p>
+                <p>Martial Arts - Blue Belt in American Kenpo (IKKA), Blue Belt in Taiji Meihua Tang Lang Kung Fu, 13 Kickboxing matches
+                (amateur)</p>
+            </section>
+            <section class="section contact">
+                <h2>Contact Me</h2>
+                <p>Find me on <a href="">LinkedIn</a></p>
+                <p>Find me on <a href="">GitHub</a></p>
+                <p>Or write me an email:</p>
+                <form action="">
+                    <label for="name">Your name:</label>
+                    <input type="text" id="name">
+                    <label for="email">Your email:</label>
+                    <input type="email" id="email">
+                    <label for="message">Your message:</label>
+                    <textarea id="message" cols="30" rows="10"></textarea>
+                    <button type="submit" class="btn">Send email</button>
+                </form>
+            </section>
+        </div>
     </main>
 
     <script src="app.js"></script>
