fixed github and linkedin links

--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
             </section>
             <section class="section contact">
                 <h2>Contact Me</h2>
-                <p>Find me on <a href="">LinkedIn</a></p>
-                <p>Find me on <a href="">GitHub</a></p>
+                <p>Find me on <a href="https://www.linkedin.com/in/marco-manunta/">LinkedIn</a></p>
+                <p>Find me on <a href="https://github.com/frozenborder72">GitHub</a></p>
                 <p>Or write me an email:</p>
                 <form action="">
                     <label for="name">Your name:</label>
